--- a/Documents/My work 2015/AngularProjects/StockDog/app/index.html
+++ b/Documents/My work 2015/AngularProjects/StockDog/app/index.html
@@ -1,101 +1,99 @@
 <!doctype html>
 <html class="no-js">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <!-- build:css(.) styles/vendor.css -->
-    <!-- bower:css -->
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
-    <!-- endbower -->
-    <!-- endbuild -->
-    <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
-    <!-- endbuild -->
-  </head>
-  <body ng-app="stockDogApp" ng-controller="MainController">
-  <nav class="navbar navbar-inverse" role="navigation" ng-cloak>
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle"
-                data-toggle="collapse" data-target="#main-nav">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="/">StockDog</a>
-      </div>
-
-      <!-- Collect the nav links and other content for toggling -->
-      <div class="collapse navbar-collapse" id="main-nav">
-        <ul class="nav navbar-nav navbar-right">
-          <!-- [2] Add active class to necessary item -->
-          <li ng-class="{active: activeView === 'dashboard'}">
-            <a href="/">Dashboard</a>
-          </li>
-          <li ng-class="{active: activeView === 'watchlist'}"
-              class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown">
-              Watchlists <b class="caret"></b>
-            </a>
-            <ul class="dropdown-menu">
-              <li ng-if="!watchlists.length" class="dropdown-header">
-                No lists found
-              </li>
-              <!-- [3] Create a unique link for each watchlist -->
-              <li ng-repeat="list in watchlists track by $index">
-                <a href="/#/watchlist/{{list.id}}">{{list.name}}</a>
-              </li>
-            </ul>
-          </li>
-        </ul>
-      </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-  </nav>
-
-  <!-- Main container -->
-  <div class="container-fluid" id="main">
-    <div ng-view=""></div>
-
-    <div class="footer">
-      <p>Built with <span class="glyphicon glyphicon-heart"></span></p>
-    </div>
-  </div>
-
-    <!-- build:js(.) scripts/oldieshim.js -->
-    <!--[if lt IE 9]>
-    <script src="bower_components/es5-shim/es5-shim.js"></script>
-    <script src="bower_components/json3/lib/json3.js"></script>
-    <![endif]-->
-    <!-- endbuild -->
-
-  <!-- build:js(.) scripts/vendor.js -->
-  <!-- bower:js -->
-  <script src="bower_components/jquery/dist/jquery.js"></script>
-  <script src="bower_components/es5-shim/es5-shim.js"></script>
-  <script src="bower_components/angular/angular.js"></script>
-  <script src="bower_components/json3/lib/json3.js"></script>
-  <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-  <script src="bower_components/angular-resource/angular-resource.js"></script>
-  <script src="bower_components/angular-cookies/angular-cookies.js"></script>
-  <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
-  <script src="bower_components/angular-animate/angular-animate.js"></script>
-  <script src="bower_components/angular-touch/angular-touch.js"></script>
-  <script src="bower_components/angular-route/angular-route.js"></script>
-  <script src="bower_components/angular-strap/dist/angular-strap.min.js"></script>
-  <script src="bower_components/angular-strap/dist/angular-strap.tpl.min.js"></script>
-  <script src="bower_components/lodash/lodash.js"></script>
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width">
+  <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+  <!-- build:css(.) styles/vendor.css -->
+  <!-- bower:css -->
+  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+  <link rel="stylesheet" href="bower_components/angular-motion/dist/angular-motion.css" />
   <!-- endbower -->
   <!-- endbuild -->
-  <!-- build:js({.tmp,app}) scripts/scripts.js -->
-  <script src="scripts/app.js"></script>
-  <script src="scripts/services/watchlist-service.js"></script>
-  <script src="scripts/directives/stk-watchlist-panel.js"></script>
-  <script src="scripts/controllers/dashboard.js"></script>
-  <script src="scripts/controllers/watchlist.js"></script>
-  <script src="scripts/controllers/main.js"></script>
+  <!-- build:css(.tmp) styles/main.css -->
+  <link rel="stylesheet" href="styles/main.css">
   <!-- endbuild -->
+</head>
+<!-- [1] Load MainCtrl -->
+<body ng-app="stockDogApp" ng-controller="MainController">
+<nav class="navbar navbar-inverse" role="navigation" ng-cloak>
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle"
+              data-toggle="collapse" data-target="#main-nav">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/">StockDog</a>
+    </div>
+
+    <!-- Collect the nav links and other content for toggling -->
+    <div class="collapse navbar-collapse" id="main-nav">
+      <ul class="nav navbar-nav navbar-right">
+        <!-- [2] Add active class to necessary item -->
+        <li ng-class="{active: activeView === 'dashboard'}">
+          <a href="/">Dashboard</a>
+        </li>
+        <li ng-class="{active: activeView === 'watchlist'}"
+            class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown">
+            Watchlists <b class="caret"></b>
+          </a>
+          <ul class="dropdown-menu">
+            <li ng-if="!watchlists.length" class="dropdown-header">
+              No lists found
+            </li>
+            <!-- [3] Create a unique link for each watchlist -->
+            <li ng-repeat="list in watchlists track by $index">
+              <a href="/#/watchlist/{{list.id}}">{{list.name}}</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
+<!-- Main container -->
+<div class="container-fluid" id="main">
+  <div ng-view="">
+  </div>
+
+  <div class="footer">
+    <p>Built with <span class="glyphicon glyphicon-heart"></span></p>
+  </div>
+</div>
+
+<!-- build:js(.) scripts/vendor.js -->
+<!-- bower:js -->
+<script src="bower_components/jquery/dist/jquery.js"></script>
+<script src="bower_components/es5-shim/es5-shim.js"></script>
+<script src="bower_components/angular/angular.js"></script>
+<script src="bower_components/json3/lib/json3.js"></script>
+<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+<script src="bower_components/angular-resource/angular-resource.js"></script>
+<script src="bower_components/angular-cookies/angular-cookies.js"></script>
+<script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+<script src="bower_components/angular-animate/angular-animate.js"></script>
+<script src="bower_components/angular-touch/angular-touch.js"></script>
+<script src="bower_components/angular-route/angular-route.js"></script>
+<script src="bower_components/angular-strap/dist/angular-strap.min.js"></script>
+<script src="bower_components/angular-strap/dist/angular-strap.tpl.min.js"></script>
+<script src="bower_components/lodash/lodash.js"></script>
+<!-- endbower -->
+<!-- endbuild -->
+
+<!-- build:js({.tmp,app}) scripts/scripts.js -->
+<script src="scripts/app.js"></script>
+<script src="scripts/services/watchlist-service.js"></script>
+<script src="scripts/directives/stk-watchlist-panel.js"></script>
+<script src="scripts/controllers/dashboard.js"></script>
+<script src="scripts/controllers/watchlist.js"></script>
+<script src="scripts/controllers/main.js"></script>
+<script src="scripts/services/companyservice.js"></script>
+<!-- endbuild -->
 </body>
 </html>
