--- a/Documents/My work 2015/AngularProjects/StockDog/app/index.html
+++ b/Documents/My work 2015/AngularProjects/StockDog/app/index.html
@@ -94,6 +94,9 @@
 <script src="scripts/controllers/watchlist.js"></script>
 <script src="scripts/controllers/main.js"></script>
 <script src="scripts/services/companyservice.js"></script>
+<script src="scripts/services/quote-service.js"></script>
+<script src="scripts/directives/stk-stock-table.js"></script>
+<script src="scripts/directives/stk-stock-row.js"></script>
 <!-- endbuild -->
 </body>
 </html>
